--- a/html/guideSections/cafes.html
+++ b/html/guideSections/cafes.html
@@ -22,7 +22,7 @@
         <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav">
                 <li class="nav-item active">
-                        <a class="nav-link" href="../../index.html">Home</a>
+                    <a class="nav-link" href="../../index.html">Home</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="../about.html">About</a>
@@ -37,7 +37,7 @@
                     <a class="nav-link" href="thingsToDo.html">Things To Do</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="htourismSpots.html">Tourism Spots</a>
+                    <a class="nav-link" href="tourismSpots.html">Tourism Spots</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="bars.html">Bars</a>
