updated collapse index ids

--- a/html/guideSections/bars.html
+++ b/html/guideSections/bars.html
@@ -56,14 +56,14 @@
     </nav>	
     <div class="container-fluid">
         <div class="card">
-            <div class="card-header" id="headingThree">
+            <div class="card-header" id="headingOne">
                 <h5 class="mb-0">
-                <button class="btn btn-link collapsed" type="button" data-toggle="collapse" data-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
+                <button class="btn btn-link collapsed" type="button" data-toggle="collapse" data-target="#collapseOne" aria-expanded="false" aria-controls="collapseThree">
                     QUB Speakeasy
                 </button>
                 </h5>
             </div>
-            <div id="collapseThree" class="collapse" aria-labelledby="headingThree" data-parent="#accordionExample">
+            <div id="collapseOne" class="collapse" aria-labelledby="headingOne" data-parent="#accordionExample">
                 <div class="card-body">
                     <h5 class="card-title">What we think you should know</h5>
                     <p>The Speakeasy in Queen's University aims to be the local for students in Queen's University. Don't feel discluded if you aren't a QUB student though, you are more than welcome!</p>
@@ -79,14 +79,14 @@
             </div>
         </div>
         <div class="card">
-            <div class="card-header" id="headingThree">
+            <div class="card-header" id="headingTwo">
                 <h5 class="mb-0">
-                <button class="btn btn-link collapsed" type="button" data-toggle="collapse" data-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
+                <button class="btn btn-link collapsed" type="button" data-toggle="collapse" data-target="#collapseTwo" aria-expanded="false" aria-controls="collapseThree">
                     Lavery's
                 </button>
                 </h5>
             </div>
-            <div id="collapseThree" class="collapse" aria-labelledby="headingThree" data-parent="#accordionExample">
+            <div id="collapseTwo" class="collapse" aria-labelledby="headingTwo" data-parent="#accordionExample">
                 <div class="card-body">
                     <h5 class="card-title">What we think you should know</h5>
                     <p>A long-standing traditional bar with sport on TV, a pool room with 18 tables, and a roof terrace.</p>
@@ -128,14 +128,14 @@
             </div>
         </div>
         <div class="card">
-            <div class="card-header" id="headingThree">
+            <div class="card-header" id="headingFour">
                 <h5 class="mb-0">
-                <button class="btn btn-link collapsed" type="button" data-toggle="collapse" data-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
+                <button class="btn btn-link collapsed" type="button" data-toggle="collapse" data-target="#collapseFour" aria-expanded="false" aria-controls="collapseThree">
                         The Dirty Onion and Yardbird
                 </button>
                 </h5>
             </div>
-            <div id="collapseThree" class="collapse" aria-labelledby="headingThree" data-parent="#accordionExample">
+            <div id="collapseFour" class="collapse" aria-labelledby="headingFour" data-parent="#accordionExample">
                 <div class="card-body">
                     <h5 class="card-title">What we think you should know</h5>
                     <p>Traditional looking pub with a modern vibe including a Jameson barrel sculpture in the beer garden</p>
@@ -151,14 +151,14 @@
             </div>
         </div>
         <div class="card">
-            <div class="card-header" id="headingThree">
+            <div class="card-header" id="headingFive">
                 <h5 class="mb-0">
-                <button class="btn btn-link collapsed" type="button" data-toggle="collapse" data-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
-                    Collapsible Group Item #6
+                <button class="btn btn-link collapsed" type="button" data-toggle="collapse" data-target="#collapseFive" aria-expanded="false" aria-controls="collapseThree">
+                    Filthy McNastys
                 </button>
                 </h5>
             </div>
-            <div id="collapseThree" class="collapse" aria-labelledby="headingThree" data-parent="#accordionExample">
+            <div id="collapseFive" class="collapse" aria-labelledby="headingFive" data-parent="#accordionExample">
                 <div class="card-body">
                     <h5 class="card-title">What we think you should know</h5>
                     <p>The mix match furniture of Filthy McNastys, the quirky décor consisting of mannequins doubling as tall lamps and vintage vinyls adorning the walls create a unique charm which makes all walks of life feel welcome.</p>
@@ -173,9 +173,6 @@
             </div>
         </div>
     </div>
-
-        
-
     <!-- Copyright -->
     <footer>
         <div class="footer-copyright text-center py-3">© 2018 Copyright: Lost Student Guide</div>
