--- a/html/guideSections/cafes.html
+++ b/html/guideSections/cafes.html
@@ -56,14 +56,14 @@
     </nav>	
     <div class="container-fluid">
         <div class="card">
-            <div class="card-header" id="headingThree">
+            <div class="card-header" id="headingOne">
                 <h5 class="mb-0">
-                <button class="btn btn-link collapsed" type="button" data-toggle="collapse" data-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
+                <button class="btn btn-link collapsed" type="button" data-toggle="collapse" data-target="#collapseOne" aria-expanded="false" aria-controls="collapseThree">
                     Caffé Nero
                 </button>
                 </h5>
             </div>
-            <div id="collapseThree" class="collapse" aria-labelledby="headingThree" data-parent="#accordionExample">
+            <div id="collapseOnw" class="collapse" aria-labelledby="headingOne" data-parent="#accordionExample">
                 <div class="card-body">
                     <h5 class="card-title">What we think you should know</h5>
                     <p>Caffé Nero is an Italian coffee-shop chain, with a light menu of sandwiches, salads and pastries. Their coffee is specially blended and it tastes great. It is perfect for meeting up with friends or even getting a bit of work done.</p>
@@ -82,14 +82,14 @@
             </div>
         </div>
         <div class="card">
-            <div class="card-header" id="headingThree">
+            <div class="card-header" id="headingTwo">
                 <h5 class="mb-0">
-                    <button class="btn btn-link collapsed" type="button" data-toggle="collapse" data-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
+                    <button class="btn btn-link collapsed" type="button" data-toggle="collapse" data-target="#collapseTwo" aria-expanded="false" aria-controls="collapseThree">
                         Starbucks
                     </button>
                 </h5>
             </div>
-            <div id="collapseThree" class="collapse" aria-labelledby="headingThree" data-parent="#accordionExample">
+            <div id="collapseTwo" class="collapse" aria-labelledby="headingTwo" data-parent="#accordionExample">
                 <div class="card-body">
                     <h5 class="card-title">What we think you should know</h5>
                     <p>A coffeehouse with roots in Seattle. This Starbucks is in a central city location - behind city hall - but during the day it is usually quiet compared ot other Starbucks location</p>
@@ -135,14 +135,14 @@
             </div>
         </div>
         <div class="card">
-            <div class="card-header" id="headingThree">
+            <div class="card-header" id="headingFour">
                 <h5 class="mb-0">
-                <button class="btn btn-link collapsed" type="button" data-toggle="collapse" data-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
+                <button class="btn btn-link collapsed" type="button" data-toggle="collapse" data-target="#collapseFour" aria-expanded="false" aria-controls="collapseThree">
                     Ground Espresso
                 </button>
                 </h5>
             </div>
-            <div id="collapseThree" class="collapse" aria-labelledby="headingThree" data-parent="#accordionExample">
+            <div id="collapseFour" class="collapse" aria-labelledby="headingFour" data-parent="#accordionExample">
                 <div class="card-body">
                     <h5 class="card-title">What we think you should know</h5>
                     <p>Ground Espresso is coffee chain store stemming from Coleraine in Northern Ireland. They are driven by their ability to provide comfort, friendship, and happiness to their customers.</p>
@@ -162,14 +162,14 @@
             </div>
         </div>
         <div class="card">
-            <div class="card-header" id="headingThree">
+            <div class="card-header" id="headingFive">
                 <h5 class="mb-0">
-                <button class="btn btn-link collapsed" type="button" data-toggle="collapse" data-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
+                <button class="btn btn-link collapsed" type="button" data-toggle="collapse" data-target="#collapseFive" aria-expanded="false" aria-controls="collapseThree">
                     Bob & Berts
                 </button>
                 </h5>
             </div>
-            <div id="collapseThree" class="collapse" aria-labelledby="headingThree" data-parent="#accordionExample">
+            <div id="collapseFive" class="collapse" aria-labelledby="headingFive" data-parent="#accordionExample">
                 <div class="card-body">
                     <h5 class="card-title">What we think you should know</h5>
                     <p>A cosy artisan coffee shop, close to the Ulster Museum and the Botanic Gardens. Not only is Bob & Berts good for coffee, it is a great spot for something to eat if you're in the mood for something tasty</p>
