--- a/html/guideSections/restaurants.html
+++ b/html/guideSections/restaurants.html
@@ -94,7 +94,7 @@
                 <h5 class="card-title">What we think you should know</h5>
                 <p>Umi Falafel offers a range of delicious vegetarian and vegan dishes. Everything on the menu is made fresh daily and their juices are so refreshing. Six falafel with humus and sweet chilli sauce for £3.50, now that's a bargain!</p>
                 <p>Location: Botanic Aveneue, Belfast</p>
-                <p>Price Rating:£</p>
+                <p>Price Rating: £</p>
                 <p><a href="http://umifalafel.ie/">Visit their website for more information</a></p>
                 <p>Opening Hours:</p>
                 <ul>
@@ -115,8 +115,8 @@
             <div class="card-body">
                     <h5 class="card-title">What we think you should know</h5>
                     <p>Whatever you are in the mood for, Maggie May's probably have it on their menu. Their daily specials and amazing milkshakes will give you a good feed and won't put you out of pocket.</p>
-                    <p>Malone Road Belfast</p>
-                    <p>££</p>
+                    <p>Location: Malone Road Belfast</p>
+                    <p>Price Rating: ££</p>
                     <p><a href="https://maggiemaysbelfastcafe.co.uk/">Visit their website for more information.</a>></p>
                     <p>Opening Hours</p>  
                     <ul>
@@ -139,8 +139,8 @@
                 <div class="card-body">
                     <h5 class="card-title">What we think you should know</h5>
                     <p>Nando's is a casual dining chain restaurant with origins in South Africa. They specialise in Portuguese style chicken dishes with various peri-peri marinades.</p>
-                    <p>Ormeay Avenue</p>
-                    <p>££</p>
+                    <p>Location: Ormeau Avenue</p>
+                    <p>Price Rating: ££</p>
                     <p><a href="https://www.nandos.co.uk/restaurants/belfast-bedford-street">Visit their website for more information</a></p>
                     <p>Opening Hours</p>   
                     <ul>
@@ -164,8 +164,8 @@
                 <div class="card-body">
                         <h5 class="card-title">What we think you should know</h5>
                         <p>Made In Belfast is a cosy restaurant serving a gastropub style menu using sustainable and locally sourced ingredients</p>
-                        <p>Talbot Street</p>
-                        <p>£££</p>
+                        <p>Location: Talbot Street</p>
+                        <p>Price Rating: £££</p>
                         <p><a href="http://madeinbelfastni.com/cathedral-quarter/">Visit their website for more information</a></p>
                         <p>Opening Hours</p>   
                         <ul>
